--- a/DOM/滚动条窗口属性/查看元素属性/查看元素位置.html
+++ b/DOM/滚动条窗口属性/查看元素属性/查看元素位置.html
@@ -47,7 +47,7 @@
 
         //父没有定位
         console.log(d2.offsetLeft);             //258还有8像素的body margin
-        console.log(d2.offsetTop);              //250因为margin塌陷body ,父div 子div共享margin
+        console.log(d2.offsetTop);              //250因为margin塌陷body ,父div 子div共享margin没有8像素
     </script>
 </body>
 
