--- a/DOM/滚动条窗口属性/获取元素属性/获取元素位置/margin塌陷.html
+++ b/DOM/滚动条窗口属性/获取元素属性/获取元素位置/margin塌陷.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
-        .d1{
+        .d1 {
             width: 500px;
             height: 500px;
             background-color: #f40;
             margin-left: 50px;
             margin-top: 50px;
+            position: relative;
+            
         }
-        .d2{
+
+        .d2 {
             width: 300px;
             height: 300px;
             background-color: #000;
             margin-left: 50px;
-            margin-top: 50px;
+            margin-top: 300px;
+            position: relative;
         }
-        .d3{
+
+        .d3 {
             width: 150px;
             height: 150px;
             background-color: #3f0;
@@ -39,6 +44,17 @@
             </div>
         </div>
     </div>
+
+    <script>
+        var d1 = document.getElementsByClassName('d1')[0];
+
+        var d2 = document.getElementsByClassName('d2')[0];
+
+        var d3 = document.getElementsByClassName('d3')[0];
+        console.log(d1.offsetTop);
+        console.log(d2.offsetTop);
+        console.log(d3.offsetTop);
+    </script>
 </body>
 
 </html>
