--- a/DOM/滚动条窗口属性/获取元素属性/求元素相对于文档的坐标.html
+++ b/DOM/滚动条窗口属性/获取元素属性/求元素相对于文档的坐标.html
@@ -55,9 +55,12 @@
         var d4 = document.getElementsByClassName('d4')[0];
 
         function getElementPostion(e) {
-            if (e.offsetParent === null) {
-                return 8;
-            }
+            // if (e.offsetParent === null) {
+            //     return {
+            //         x: e.offsetLeft,
+            //         y: e.offsetTop
+            //     }
+            // }
 
             if (e.offsetParent == document.body) {
                 return {
