--- a/温故而知新/原型链.html
+++ b/温故而知新/原型链.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>原型链</title>
 </head>
 
 <body>
@@ -34,6 +34,19 @@
         }
 
         var son = new Son();
+
+
+        Person.prototype = {
+            toString: function () {
+                return '123';
+            }
+        };
+
+        function Person() {
+
+        }
+
+        var p = new Person();
     </script>
 </body>
 
