--- a/BOM/window/index.html
+++ b/BOM/window/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>window</title>
+    <title>index</title>
 </head>
 
 <body>
+    测试窗口
 
     <script>
-        
+        console.log(window.parent.a);
     </script>
+
 </body>
 
 </html>
