--- a/DOM/穿插知识点/封装兼容性的getByClassName方法/自己的getByClassName方法.html
+++ b/DOM/穿插知识点/封装兼容性的getByClassName方法/自己的getByClassName方法.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>封装兼容性的byClassName方法</title>
+    <title>封装兼容性的getByClassName方法</title>
 </head>
 
 <body>
 
 
-    <div class="demo">
-        <strong class="demo">
+    <div class="demo aaa">
+        <strong class="demo aaa">
             <span class="demo"></span>
         </strong>
         <em class="demo"></em>
@@ -21,7 +21,6 @@
 
     </div>
     <span class="demo"></span>
-
 
 
     <script>
