--- a/DOM/j运动/缓冲运动/物体多值链式运动框架.html
+++ b/DOM/j运动/缓冲运动/物体多值链式运动框架.html
@@ -62,6 +62,7 @@
             obj.timer = setInterval(function () {
                 var bStop = true;
                 for (var attr in json) {
+                    console.log(attr);
                     if (attr == 'opacity') {
                         iCur = parseFloat(getStyle(obj, attr)) * 100;
                     } else {
