--- a/DOM/j运动/123.html
+++ b/DOM/j运动/123.html
@@ -82,13 +82,14 @@
 
         function startMove(obj, json, callback) {
             clearInterval(obj.timer);
-            var iSpeed, iCur;
+            var iSpeed, iCur, name;
 
             obj.timer = setInterval(function () {
                 var bStop = true;
 
                 for (var attr in json) {
                     if (attr == 'opacity') {
+                        name = 'opacity';
                         iCur = parseFloat(getStyle(obj, 'opacity')) * 100;
                     } else {
                         iCur = parseInt(getStyle(obj, attr));
@@ -99,13 +100,20 @@
 
                     obj.style[attr] = attr == 'opacity' ? (iCur + iSpeed) / 100 : iCur + iSpeed + "px";
 
-                    if (iCur != json[attr]) {
+                    // if (iCur != json[attr]) {
+                    //     bStop = false;
+                    // }
+
+                    if (Math.floor(Math.abs(json[attr] - iCur)) != 0) {
                         bStop = false;
                     }
                 }
 
                 if (bStop) {
                     clearInterval(obj.timer);
+                    if (name === 'opacity') {
+                        obj.style.opacity = json[name] / 100;
+                    }
                     typeof callback == 'function' ? callback() : '';
                 }
             }, 30);
