--- a/DOM/j运动/轮播图/index3.html
+++ b/DOM/j运动/轮播图/index3.html
@@ -98,16 +98,28 @@
     <div class="wrapper">
         <ul class="sliderPage">
             <li>
-                <img src="images/theme/1.jpg" alt=""><img src="images/theme/2.jpg" alt=""><img src="images/theme/3.jpg" alt=""><img src="images/theme/4.jpg" alt="">
+                <img src="images/theme/1.jpg" alt="">
+                <img src="images/theme/2.jpg" alt="">
+                <img src="images/theme/3.jpg" alt="">
+                <img src="images/theme/4.jpg" alt="">
             </li>
             <li>
-                <img src="images/theme/5.jpg" alt=""><img src="images/theme/6.jpg" alt=""><img src="images/theme/7.jpg" alt=""><img src="images/theme/8.jpg" alt="">
+                <img src="images/theme/5.jpg" alt="">
+                <img src="images/theme/6.jpg" alt="">
+                <img src="images/theme/7.jpg" alt="">
+                <img src="images/theme/8.jpg" alt="">
             </li>
             <li>
-                <img src="images/theme/9.jpg" alt=""><img src="images/theme/10.jpg" alt=""><img src="images/theme/11.jpg" alt=""><img src="images/theme/12.jpg" alt="">
+                <img src="images/theme/9.jpg" alt="">
+                <img src="images/theme/10.jpg" alt="">
+                <img src="images/theme/11.jpg" alt="">
+                <img src="images/theme/12.jpg" alt="">
             </li>
             <li>
-                <img src="images/theme/1.jpg" alt=""><img src="images/theme/2.jpg" alt=""><img src="images/theme/3.jpg" alt=""><img src="images/theme/4.jpg" alt="">
+                <img src="images/theme/1.jpg" alt="">
+                <img src="images/theme/2.jpg" alt="">
+                <img src="images/theme/3.jpg" alt="">
+                <img src="images/theme/4.jpg" alt="">
             </li>
         </ul>
         <div class="btn leftBtn">&lt</div>
