--- a/ECMAScript/数组/数组常用方法/数组扩展方法/reduce/reduce.html
+++ b/ECMAScript/数组/数组常用方法/数组扩展方法/reduce/reduce.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>filter</title>
+    <title>reduce</title>
 </head>
 
 <body>
 
     <script>
         var arr = [1, 2, 3, 4, 5];
-
-        var filterArr = arr.filter(function (item) {
-            return item > 3;
+        
+        var value = arr.reduce(function (preValue, item, index) {
+            return preValue + item;
         });
 
-        console.log(filterArr);        //[4,5]
+        console.log(value);     //15
     </script>
 </body>
 
