--- a/ECMAScript/数组/数组常用方法/数组应用提升/store分发2/筛选器.html
+++ b/ECMAScript/数组/数组常用方法/数组应用提升/store分发2/筛选器.html
@@ -34,7 +34,8 @@
         </div>
     </div>
 
-    <script src="filter.js"></script>
+    <script src="createStore2.js"></script>
+    <script src="filter2.js"></script>
 </body>
 
 </html>
