--- a/jQuery/jQuery函数/jQuery元素属性方法/addClass removeClass.html
+++ b/jQuery/jQuery函数/jQuery元素属性方法/addClass removeClass.html
@@ -38,7 +38,7 @@
         <li></li>
     </ul>
 
-    <script src="../jquery-3.3.1.min.js"></script>
+    <script src="../../jquery-3.3.1.min.js"></script>
     <script>
         $('li').click(function () {
             // $('li').removeClass('active');
@@ -46,6 +46,9 @@
             $(this).addClass('active');
         });
 
+        $('li').addClass(function (index) {
+            return index % 3 == 0 ? 'active' : '';
+        });
     </script>
 </body>
 
