--- a/jQuery/工具方法/$.Deferred ()延迟对象/$.Deferred ()延迟对象.html
+++ b/jQuery/工具方法/$.Deferred ()延迟对象/$.Deferred ()延迟对象.html
@@ -32,7 +32,7 @@
         }
 
         var cb = aa();
-        cb.resolve();
+        // cb.resolve();
 
         cb.done(function () {
             console.log('ok');
