--- a/jQuery/淘宝轮播图/swiper/swiper.html
+++ b/jQuery/淘宝轮播图/swiper/swiper.html
@@ -63,7 +63,8 @@
         </div>
     </div>
 
-
+    <script src="../../jquery-3.3.1.min.js"></script>
+    <script src="swiper.js"></script>
 </body>
 
 </html>
