--- a/CSS3/导航/nav答案.html
+++ b/CSS3/导航/nav答案.html
@@ -7,47 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         * {
-            margin: 0;
             padding: 0;
+            margin: 0;
             list-style: none;
         }
 
         @font-face {
-            font-family: 'myFamily';
+            font-family: 'myfamily';
             src: url('./Gomo.ttf');
         }
 
         .nav {
             display: inline-block;
-            margin-top: 100px;
-            margin-left: 100px;
-            height: 15px;
-            padding: 10px 0;
             background-color: rgba(255, 165, 0, 1);
-            border-radius: 5px;
-            box-shadow: 0px 4px 3px;
+            box-shadow: 0 4px 4px #666;
         }
 
         .nav li {
             float: left;
-            width: 120px;
-            height: 15px;
-            line-height: 15px;
-            text-align: center;
-            border-right: 1px dotted #fff;
+            padding: 0 20px;
+            margin: 8px 0;
+            border-right: 1px dashed #fff;
+            font-size: 14px;
+            text-shadow: 2px 2px 3px #000;
+            font-family: 'myfamily';
         }
 
         .nav li:last-child {
-            border-right: 0;
+            border: 0;
         }
 
         .nav li a {
             text-decoration: none;
             color: #fff;
-            font-family: 'myFamily';
         }
     </style>
-    <title>nav</title>
+    <title>nav答案</title>
 </head>
 
 <body>
@@ -72,6 +67,7 @@
             <a href="#">Contact me</a>
         </li>
     </ul>
+
 
 </body>
 
