--- a/轮子.html
+++ b/轮子.html
@@ -12,6 +12,7 @@
 
     <div class="wrapper">
         <input type="text" id="input">
+        <input type="text" id="aaa">
     </div>
 
     <script>
